--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WD-TuanNg</title>
 <link rel="stylesheet" href="main.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Pacifico&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,7 +14,7 @@
 	<div class="wrapper">
 	<header id="home">
 		<span><b>S</b>mart News</span>
-		<img src="img/1.jpg" alt="profile">
+		<img src="img/1.jpg" alt="profile" id="about">
 		<div class="line l1"></div>
 		<aside>
 			<nav>
@@ -23,8 +24,7 @@
 					<li><a href="#post">Post</a></li>
 					<li><a href="#style">Style</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<input type="text" placeholder="Search.." name="search">
-					<button type="submit"><i class="fa fa-search"></i></button>
+					<li><input type="text" placeholder="  Search..." name="search" class="search"></li>
 				</ul>
 			</nav>
 			<h3>24 july, 2017</h3>
@@ -56,7 +56,7 @@
 				<img src="img/3.jpg" alt="blond">
 				<div class="tag">STYLE</div>
 				<div class="tag">TRAVEL</div>
-				<h6>Fahion Trends fo summer beach pảty</h6>
+				<h6>Fahion Trends fo summer beach party</h6>
 				<p>By Adam Rose</p><p>12 hours Ago</p>
 			</div>
 			<div class="box">
@@ -93,13 +93,13 @@
 				<p>Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam</p>
 			</div>
 			<div class="square">
-				<div class="round"><img src="img/8.png" alt="luis"></div>
+				<div class="round"><img src="img/9.png" alt="luis"></div>
 				<h7>LUIS GARCIA</h7>
 				<hr>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam</p>
 			</div>
 			<div class="square">
-				<div class="round"><img src="img/9.png" alt="amy"></div>
+				<div class="round"><img src="img/8.png" alt="amy"></div>
 				<h7>AMY ADAMS</h7>
 				<hr>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam</p>
@@ -125,8 +125,7 @@
 				<li><a href="#post">Post</a></li>
 				<li><a href="#style">Style</a></li>
 				<li><a href="#contact">Contact</a></li>
-						<input type="text" placeholder="Search.." name="search">
-						<button type="submit"><i class="fa fa-search"></i></button>
+				<li><input type="text" placeholder="   Search..." name="search" class="search"></li>
 			</ul>
 		</nav>
 		<div class="social">
