--- a/index.html
+++ b/index.html
@@ -43,40 +43,52 @@
 		<h4>Recent News</h4>
 		<div class="line l2"></div>
 		<div class="container">
-			<div data-aos="fade-right"><div class="box">
+			<div data-aos="fade-right"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box">
 				<img src="img/2.jpg" alt="road">
 				<div class="tag">DESIGN</div>
 				<div class="tag">DOCUMENT</div>
 				<h6>How to Create Cool Pattern In Image Process</h6>
 				<p>By Adam Rose</p><p>16 hours Ago</p>
 			</div></div>
-			<div data-aos="fade-left"><div class="box">
+			<div data-aos="fade-left"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box">
 				<img src="img/14.jpg" alt="violin">
 				<div class="tag">MUSIC</div>
 				<div class="tag">TRAVEL</div>
 				<h6>5 Great lessions you can learn from music</h6>
 				<p>By Adam Rose</p><p>18 hours Ago</p>
 			</div></div>
-			<div data-aos="fade-right"><div class="box">
+			<div data-aos="fade-right"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box">
 				<img src="img/3.jpg" alt="blond">
 				<div class="tag">STYLE</div>
 				<div class="tag">TRAVEL</div>
 				<h6>Fahion Trends fo summer beach party</h6>
 				<p>By Adam Rose</p><p>12 hours Ago</p>
 			</div></div>
-			<div data-aos="fade-left"><div class="box">
+			<div data-aos="fade-left"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box">
 				<img src="img/4.jpg" alt="pink">
 				<div class="tag">DESIGN</div>
 				<div class="tag">TRAVEL</div>
 				<h6>The Ultimate Cheat Sheet on galleries</h6>
 				<p>By Robert Bosch</p><p>09 hours Ago</p>
 			</div></div>
-			<div data-aos="fade-right"><div class="box b5">
+			<div data-aos="fade-right"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box b5">
 				<img src="img/5.png" alt="cloud">
 				<h6>Download  Noticies free invoice templates</h6>
 				<i class="far fa-arrow-alt-circle-down"></i>
 			</div></div>
-			<div data-aos="fade-left"><div class="box">
+			<div data-aos="fade-left"
+     data-aos-offset="1000"
+     data-aos-easing="ease-in-sine"><div class="box">
 				<img src="img/6.jpg" alt="sunglasses">
 				<div class="tag">DESIGN</div>
 				<div class="tag">DOCUMENT</div>
@@ -91,7 +103,7 @@
 		<h4>Testimonials</h4>
 		<div class="line l2"></div>
 		<div class="container">
-			<div data-aos="fade-down"
+			<div data-aos="fade-up"
      data-aos-easing="linear"
      data-aos-duration="1500"><div class="square">
 				<div class="round"><img src="img/7.png" alt="shane"></div>
@@ -99,7 +111,7 @@
 				<hr>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam</p>
 			</div></div>
-			<div data-aos="fade-down"
+			<div data-aos="fade-up"
      data-aos-easing="linear"
      data-aos-duration="1500"><div class="square">
 				<div class="round"><img src="img/9.png" alt="luis"></div>
@@ -107,7 +119,7 @@
 				<hr>
 				<p>Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam</p>
 			</div></div>
-			<div data-aos="fade-down"
+			<div data-aos="fade-up"
      data-aos-easing="linear"
      data-aos-duration="1500"><div class="square">
 				<div class="round"><img src="img/8.png" alt="amy"></div>
@@ -124,7 +136,9 @@
 		</div>
 	</section>
 	<section id="contact">
-		<div data-aos="flip-down"><h5>Sign Up For Our Newsletter:</h5></div>
+		<div data-aos="flip-down"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="1000"><h5>Sign Up For Our Newsletter:</h5></div>
 		<input id="email" type="email" placeholder="  Your email Address...">
 		<button class="button">SUBSCRIBE</button>
 	</section>
